Fixed. Unnecessary proprietary attribute "a".

--- a/plugins/AdminScreenComponent/tmpl/component_step_3.tmpl
+++ b/plugins/AdminScreenComponent/tmpl/component_step_3.tmpl
@@ -32,8 +32,8 @@
    id="useful-link-widget"
    label="Widget with Links">
     <ul>
-    <li><a a class="icon-left icon-related" href="https://movabletype.org" target="_blank">movabletype.org</a></li>
-    <li><a a class="icon-left-xwide icon-action" href="http://www.movabletype.jp" target="_blank">movabletype.jp</a></li>
+    <li><a class="icon-left icon-related" href="https://movabletype.org" target="_blank">movabletype.org</a></li>
+    <li><a class="icon-left-xwide icon-action" href="http://www.movabletype.jp" target="_blank">movabletype.jp</a></li>
     </ul>
 </mtapp:widget>
 
@@ -158,11 +158,9 @@
     label="date-time-fields"
     show_hint="0"
     show_label="1">
-    <div class="date-time-fields">
-        <input type="text" id="time-on-date" class="text date text-date" name="time_on_date" value="" />
-        <span class="separator"> @</span>
-        <input type="text" id="time-on-time" class="text time" name="time_on_time" value="" />
-    </div>
+<input type="text" id="time-on-date" class="text date text-date" name="time_on_date" value="" />
+<span class="separator"> @</span>
+<input type="text" id="time-on-time" class="text time" name="time_on_time" value="" />
 </mtapp:setting>
 
 <mtapp:setting
