--- a/plugins/AdminScreenComponent/tmpl/component_step_4.tmpl
+++ b/plugins/AdminScreenComponent/tmpl/component_step_4.tmpl
@@ -46,8 +46,8 @@
    id=&quot;useful-link-widget&quot;
    label=&quot;Widget with Links&quot;&gt;
     &lt;ul&gt;
-    &lt;li&gt;&lt;a a class=&quot;icon-left icon-related&quot; href=&quot;https://movabletype.org&quot; target=&quot;_blank&quot;&gt;movabletype.org&lt;/a&gt;&lt;/li&gt;
-    &lt;li&gt;&lt;a a class=&quot;icon-left-xwide icon-action&quot; href=&quot;http://www.movabletype.jp&quot; target=&quot;_blank&quot;&gt;movabletype.jp&lt;/a&gt;&lt;/li&gt;
+    &lt;li&gt;&lt;a class=&quot;icon-left icon-related&quot; href=&quot;https://movabletype.org&quot; target=&quot;_blank&quot;&gt;movabletype.org&lt;/a&gt;&lt;/li&gt;
+    &lt;li&gt;&lt;a class=&quot;icon-left-xwide icon-action&quot; href=&quot;http://www.movabletype.jp&quot; target=&quot;_blank&quot;&gt;movabletype.jp&lt;/a&gt;&lt;/li&gt;
     &lt;/ul&gt;
 &lt;/mtapp:widget&gt;
 
@@ -70,8 +70,8 @@
    id="useful-link-widget"
    label="Widget with Links">
     <ul>
-    <li><a a class="icon-left icon-related" href="https://movabletype.org" target="_blank">movabletype.org</a></li>
-    <li><a a class="icon-left-xwide icon-action" href="http://www.movabletype.jp" target="_blank">movabletype.jp</a></li>
+    <li><a class="icon-left icon-related" href="https://movabletype.org" target="_blank">movabletype.org</a></li>
+    <li><a class="icon-left-xwide icon-action" href="http://www.movabletype.jp" target="_blank">movabletype.jp</a></li>
     </ul>
 </mtapp:widget>
 
@@ -330,11 +330,9 @@
     label=&quot;date-time-fields&quot;
     show_hint=&quot;0&quot;
     show_label=&quot;1&quot;&gt;
-    &lt;div class=&quot;date-time-fields&quot;&gt;
-        &lt;input type=&quot;text&quot; id=&quot;time-on-date&quot; class=&quot;text date text-date&quot; name=&quot;time_on_date&quot; value=&quot;&quot; /&gt;
-        &lt;span class=&quot;separator&quot;&gt; @&lt;/span&gt;
-        &lt;input type=&quot;text&quot; id=&quot;time-on-time&quot; class=&quot;text time&quot; name=&quot;time_on_time&quot; value=&quot;&quot; /&gt;
-    &lt;/div&gt;
+&lt;input type=&quot;text&quot; id=&quot;time-on-date&quot; class=&quot;text date text-date&quot; name=&quot;time_on_date&quot; value=&quot;&quot; /&gt;
+&lt;span class=&quot;separator&quot;&gt; @&lt;/span&gt;
+&lt;input type=&quot;text&quot; id=&quot;time-on-time&quot; class=&quot;text time&quot; name=&quot;time_on_time&quot; value=&quot;&quot; /&gt;
 &lt;/mtapp:setting&gt;
 </pre>
 <br />
@@ -344,11 +342,9 @@
     label="date-time-fields"
     show_hint="0"
     show_label="1">
-    <div class="date-time-fields">
-        <input type="text" id="time-on-date" class="text date text-date" name="time_on_date" value="" />
-        <span class="separator"> @</span>
-        <input type="text" id="time-on-time" class="text time" name="time_on_time" value="" />
-    </div>
+<input type="text" id="time-on-date" class="text date text-date" name="time_on_date" value="" />
+<span class="separator"> @</span>
+<input type="text" id="time-on-time" class="text time" name="time_on_time" value="" />
 </mtapp:setting>
 
 
