Added. 'text highest' class.

--- a/plugins/AdminScreenComponent/tmpl/component_step_3.tmpl
+++ b/plugins/AdminScreenComponent/tmpl/component_step_3.tmpl
@@ -190,6 +190,14 @@
 <textarea class="text full high" id="textarea-full-high">text full high</textarea>
 </mtapp:setting>
 
+<mtapp:setting
+    id="textarea-full-highest"
+    label_class="top-label"
+    label="text full highest"
+    show_hint="0"
+    show_label="1">
+<textarea class="text full highest" id="textarea-full-highest">text full highest</textarea>
+</mtapp:setting>
 
 <mtapp:setting
     id="button-action-primary"
