--- a/plugins/AdminScreenComponent/tmpl/component_step_4.tmpl
+++ b/plugins/AdminScreenComponent/tmpl/component_step_4.tmpl
@@ -86,7 +86,6 @@
 
 <mt:include name="include/header.tmpl" id="header_include">
 
-
 <h2>App:Setting</h2>
 
 <pre>
@@ -409,6 +408,27 @@
     show_label="1">
 <textarea class="text full high" id="textarea-full-high">text full high</textarea>
 </mtapp:setting>
+
+<pre>
+&lt;mtapp:setting
+    id=&quot;textarea-full-highest&quot;
+    label_class=&quot;top-label&quot;
+    label=&quot;text full highest&quot;
+    show_hint=&quot;0&quot;
+    show_label=&quot;1&quot;&gt;
+&lt;textarea class=&quot;text full highest&quot; id=&quot;textarea-full-high&quot;&gt;text full high&lt;/textarea&gt;
+&lt;/mtapp:setting&gt;
+</pre>
+<br />
+<mtapp:setting
+    id="textarea-full-highest"
+    label_class="top-label"
+    label="text full highest"
+    show_hint="0"
+    show_label="1">
+<textarea class="text full highest" id="textarea-full-highest">text full highest</textarea>
+</mtapp:setting>
+
 
 <h2>Button</h2>
 
